Update ACC to CUDA/OpenCL translator so that it can include variables used only in the gang/worker/vector clause argument. UPdate the loop directive preprocessor to better handle iteration-to-thread mappings Fix a bug in the loop directive preprocessor, which had wrongly overwriten existing worker clauses. Update AccPrivatization pass to change firstprivate variables to private variables if allowed, which will remove unnecessary memory transfers and may remove gang-private variable creations. Fix bugs in the AccAnalysis pass so that scalar variables in a parallel region, which is not explicitly included in any enclosing data clauses, will be treated as if they are firstprivate variables. Update CUDA and OpenCL translation passes to optimize gang-level firstprivate variables.

--- a/make.header.sample
+++ b/make.header.sample
@@ -351,10 +351,12 @@ GFRONTEND_DEBUG = -g
 else
 BACKENDCXX = g++
 CC_FLAGS_PREFIX = 
+#GBACKEND_FLAGS = -O3 -fPIC -mcmodel=large
 GBACKEND_FLAGS = -O3
 GBACKEND_INCLUDES = -I/usr/local/cuda/include
 GBACKEND_LIBS = -L/usr/local/cuda/lib64 -lOpenCL
 GBACKEND_DEBUG = -g
+#GFRONTEND_FLAGS = -O3 -fPIC -mcmodel=large
 GFRONTEND_FLAGS = -O3
 GFRONTEND_INCLUDES = -I$(OPENARCLIB)
 GFRONTEND_LIBS = -L$(OPENARCLIB) -L/usr/local/cuda/lib64 -lOpenCL
